# muF

./: .gitignore  AUTHORS  CITATION.cff  CMakeLists.txt  README.md
src/ast/: ast.h  opt.cpp  opt.h  print.cpp  print.h  printast.cpp  printast.h  semantics.cpp  semantics.h
src/codegen/: arr.cpp  asm.cpp  asm.h  codegen.cpp  codegen.h  consttab.cpp  consttab.h  func.cpp  loops.cpp  main.cpp  ops.cpp  var.cpp
src/common/: context.h  ext_funcs.h  helpers.h  sym.cpp  sym.h  types.h  version.h
src/parser/: arr.cpp  func.cpp  grammar.cpp  grammar.h  lexer.cpp  lexer.h  loops.cpp  lval.h  ops.cpp  parsergen.cpp  var.cpp
src/vm/: extfuncs.cpp  helpers.h  main.cpp  mem.h  memdump.cpp  opcodes.h  ops.cpp  ops.h  run.cpp  types.h  vm.cpp  vm.h
test/: comb.muf  fibo.muf  tst_func.muf
